Changes the html page to match code

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
   <h2><div class="currentTemp">Current Temperature: 20</h2></div>
 
   <h2 class="PSM">Power Saving Mode: On/Off</h2><br>
-  <form class="PSM">
-    <input type="text" placeholder="True OR False">
-    <input type="submit" value="Set Power Saving Mode">
-  </form><br>
+  <button type="button" id="psmOn">Turn PSM ON</button>
+  <button type="button" id="psmOffTemp">Turn PSM OFF</button>
 
   <button type="button" id="resetTemp">Reset Temperature</button>
   <button type="button" id="upTemp">Increase Temperature</button>
