--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
   <meta charset="utf-8">
   <title>Thermostat</title>
   <script src="jasmine/src/Thermostat.js"></script>
+  <script src="interface/jquery-3.1.1.min.js"></script>
+  <script src="interface/thermostatInterface.js"></script>
 </head>
 
 <body>
 
   <h1>Thermostat</h1>
-  <h2><div class="currentTemp">Current Temperature: 20</h2></div>
+  <h2><div id="currentTemp">Current Temperature: 20</h2></div>
 
   <h2 class="PSM">Power Saving Mode: On/Off</h2><br>
-  <button type="button" id="psmOn">Turn PSM ON</button>
-  <button type="button" id="psmOffTemp">Turn PSM OFF</button>
+  <button onClick="psmOn();" type="button" id="psmOn">Turn PSM ON</button>
+  <button onClick="t.setPowerSavingModeOff();" type="button" id="psmOffTemp">Turn PSM OFF</button>
 
   <button type="button" id="resetTemp">Reset Temperature</button>
   <button type="button" id="upTemp">Increase Temperature</button>
