Amends buttons to have a togglePSM

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="utf-8">
   <title>Thermostat</title>
+  <link rel="stylesheet" type="text/css" href="public/style.css">
   <script src="jasmine/src/Thermostat.js"></script>
   <script src="interface/jquery-3.1.1.min.js"></script>
-  <script src="interface/thermostatInterface.js"></script>
 </head>
 
 <body>
 
   <h1>Thermostat</h1>
-  <h2><div id="currentTemp">Current Temperature: 20</h2></div>
+  <div style="display:in-line;"><h2>Current Temperature:</h2><h2 id="currentTemp"></h2></div>
 
-  <h2 class="PSM">Power Saving Mode: On/Off</h2><br>
-  <button onClick="psmOn();" type="button" id="psmOn">Turn PSM ON</button>
-  <button onClick="t.setPowerSavingModeOff();" type="button" id="psmOffTemp">Turn PSM OFF</button>
+  <h2 class="PSM">Power Saving Mode: <button id="psm-btn"></button></h2><br>
+  <button onClick="psmToogle();" type="button" id="tooglePSM">Toogle PSM</button>
 
   <button type="button" id="resetTemp">Reset Temperature</button>
   <button type="button" id="upTemp">Increase Temperature</button>
   <button type="button" id="downTemp">Decrease Temperature</button>
 
+  <script src="interface/thermostatInterface.js"></script>
 </body>
 </html>
