--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 
   <h1>Thermostat</h1>
-  <div style="display:in-line;"><h2>Current Temperature:</h2><h2 id="currentTemp"></h2></div>
+  <div style="display:in-line;"><h2>Current Temperature:<span id="currentTemp"></span></h2></div>
+  <div style="display:in-line;"><h2>Energy Usage:<button class="energyUsageLow" id="energyUsage"></button></h2></div>
 
   <h2 class="PSM">Power Saving Mode: <button id="psm-btn"></button></h2><br>
   <button onClick="psmToogle();" type="button" id="tooglePSM">Toogle PSM</button>
