Restyling termperature gauge

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
               <div class="minusTwenty"></div>
             <div class="top"></div>
              <div class="plusFifty"></div>
+              <div class="thermEnd"></div>
             <div class="therm-inner-border">
                <div class="therm-inner">
                   <div class="therm-middle">
