--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          </div>
       </div>
       <center>
-         <h2>Weather report</h2>
+      <h2>Weather report</h2>
       </center>
       <select class="select-style " id="select-city">
          <option value="Berlin">Berlin</option>
@@ -47,30 +47,39 @@
       <h3 id="weatherReport"></h3>
       </center>
       <center>
-        <p id="outsideTemp">Outside temperature</p>
+      <p id="outsideTemp">Outside temperature</p>
       </center>
       <div class="therm-border">
          <div class="therm-outer">
-           <div class="minusTen"> </div>
-            <div class="bottom"> </div>
-             <div class="plusTen"> </div>
-            <div class="middle"> </div>
-             <div class="plusThirty"></div>
-              <div class="minusTwenty"></div>
-            <div class="top"></div>
-             <div class="plusFifty"></div>
-              <div class="thermEnd"></div>
-            <div class="therm-inner-border">
-               <div class="therm-inner">
-                  <div class="therm-middle">
-                     <div class="medium-usage" >
-                     </div>
-                     <span class="needle">
-                     </span>
-                  </div>
-               </div>
+          <div class="minusTen">
+          </div>
+          <div class="bottom">
+          </div>
+          <div class="plusTen">
+          </div>
+          <div class="middle">
+          </div>
+          <div class="plusThirty">
+          </div>
+          <div class="minusTwenty">
+          </div>
+          <div class="top">
+          </div>
+          <div class="plusFifty">
+          </div>
+          <div class="thermEnd">
+          </div>
+          <div class="therm-inner-border">
+            <div class="therm-inner">
+              <div class="therm-middle">
+                <div class="medium-usage" >
+                </div>
+                <span class="needle">
+                </span>
+              </div>
             </div>
-         </div>
+          </div>
+        </div>
       </div>
       <br>
       <br>
